dfir_rs/tests/compile-fail/nightly/surface_handoff_args.stderr
error: `handoff` takes no arguments.
 --> tests/compile-fail/nightly/surface_handoff_args.rs:5:31
  |
5 |         source_iter(0..10) -> handoff(42) -> for_each(std::mem::drop);
  |                               ^^^^^^^
